# cargo-archpkg

./: Cargo.toml  README.md  build.rs
src/: cli.rs  config.rs  main.rs
src/pkgbuild/: dependencies.rs  functions.rs  lib.rs  metadata.rs  misc.rs  package_relations.rs  source.rs  util.rs
